--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "protips",
   "version": "1.0.1",
   "description": "Output pro-tips for your dev tool",
-  "main": "index.js",
+  "main": "es5/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "babel src --out-dir es5 --presets es2015"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/wheresrhys/protips#readme",
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
     "sinon": "^1.17.4"
